--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -106,6 +106,10 @@ a.sidebar-link {
 .sidebar-link[data-bs-toggle="collapse"].collapsed::after {
     transform: rotate(45deg);
     transition: all .2s ease-out;
+
+}
+.sidebar-link:hover {
+    color: rgb(42, 182, 237) !important;
 }
 
 .avatar {
