--- a/public/assets/css/auteur.css
+++ b/public/assets/css/auteur.css
@@ -17,7 +17,7 @@ main{
     width: 60vw;
     display: flex;
     align-items: center;
-    margin-left: 12vw;
+
 }
 
 h1{
@@ -37,17 +37,21 @@ p{
     height: 24vw;
 }
 .icon{
-    margin-top: -400px;
     margin-left: 100px;
     cursor: pointer;
 }
 .icon :hover{
     color: blue;
 }
+.categorie{
+  display: flex;
+  gap: 30px;
+}
 .categories{
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 19vw;
+    margin-left: 30vw;
 }
 #btn{
     border: solid 0px black ;
