add modification in page acteur

--- a/public/assets/css/auteur.css
+++ b/public/assets/css/auteur.css
@@ -80,7 +80,7 @@ p{
   }
 
   .popup-content {
-    background: #fff;
+    background: #ffffff;
     padding: 20px;
     border-radius: 8px;
   }
@@ -89,8 +89,8 @@ p{
     justify-content: center;
     flex-direction: column;
     gap: 16px;
-    width: 26vw;
-    height: auto;
+    width: 35vw;
+    height: 40vw;
   }
   .popup-content form select{
     border: solid 1px black;
@@ -147,4 +147,7 @@ p{
     justify-content: center;
     align-items: center;
 
+  }
+  #file{
+    height: 60px;
   }
