--- a/public/assets/css/auteur.css
+++ b/public/assets/css/auteur.css
@@ -90,7 +90,8 @@ p{
     justify-content: center;
     flex-direction: column;
     gap: 16px;
-    width: 35vw;
+    width:26vw;
+    /* align-items: center; */
     height: 40vw;
   }
   .popup-content form select{
@@ -132,8 +133,8 @@ p{
   }
   .checkbox{
     display: flex;
-    flex-direction: column;
     align-items: center;
+    gap: 20px;
   }
   .chek{
     gap: 10px;
@@ -155,3 +156,17 @@ p{
   #search{
     background-color: transparent;
   }
+  #searchResult {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-top: none;
+    border-radius: 0 0 5px 5px; 
+}
+#wikiContent{
+  width: 24vw;
+  height: 10vw;
+}
